# opdesign

./: .gitignore  ChangeLog.md  LICENSE  README.md  opdesign.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Main.hs  OrderBook.hs  TicksReader.hs
src/Data/Conduit/: Log.hs  Merge.hs
src/Data/String/: Strip.hs
src/Data/Timezones/: TZ.hs
src/OpDesign/: OrderBook.hs  OrderBookStream.hs  SignalProcessing.hs  TicksReader.hs  TradingStrategy.hs
test/: SpecHelper.hs
test/Data/Conduit/: MergeSpec.hs
test/Data/String/: StripSpec.hs
test/Data/Timezones/: TZSpec.hs
test/OpDesign/: OrderBookSpec.hs  SignalProcessingSpec.hs  TicksReaderSpec.hs  TradingStrategySpec.hs
