name: opdesign
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: ch.alexandre@bluewin.ch
category: Math
author: Christophe
data-files:
    data/GX1%20Index.zip
    data/data-small.zip
extra-source-files:
    ChangeLog.md
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable opdesign
  main-is: Main.hs
  buildable: True
  build-depends:
      path-io -any,
      path -any,
      text -any,
      zip -any,
      conduit -any,
      cmdargs -any,
      base -any,
      regex-compat -any,
      conduit-extra -any,
      containers -any
  default-language: Haskell2010
  hs-source-dirs: src
