name:                opdesign
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chris-ch/opdesign#readme
license:             BSD3
license-file:        LICENSE
author:              Christophe
maintainer:          ch.alexandre@bluewin.ch
copyright:           Optimacom sarl
category:            markets
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:
    data/data-small.zip

library
  hs-source-dirs:      src
  exposed-modules:     OrderBook
                     , TicksReader
  build-depends:       base >= 4.7 && < 5
                     , path-io
                     , cmdargs
                     , regex-compat
                     , bytestring
                     , containers
                     , path
                     , text
                     , zip
                     , conduit-combinators
                     , conduit
                     , time
                     , conduit-extra
  default-language:    Haskell2010

executable opdesign
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , opdesign
                     , path-io
                     , cmdargs
                     , regex-compat
                     , bytestring
                     , containers
                     , path
                     , text
                     , zip
                     , conduit-combinators
                     , conduit
                     , time
                     , conduit-extra
  default-language:    Haskell2010

test-suite opdesign-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , opdesign
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chris-ch/opdesign
